--- a/capstone/src/components/listing.css
+++ b/capstone/src/components/listing.css
@@ -5,12 +5,12 @@ box-sizing: border-box;
 }
 
 .container {
-    position: relative;
     display: flex;
     flex-direction: column;
     height: 300px;
     width: 1000px;
     border-bottom: 1px solid black;
+    margin: 0 auto;
 }
 
 .container img{
