--- a/capstone/src/components/listings.css
+++ b/capstone/src/components/listings.css
@@ -4,6 +4,7 @@
     width: 1050px;
     margin: 0 auto;
     overflow-y: scroll;
+    overflow-x: hidden;
     height: 100%;
     bottom: 0;
     position: relative;
