--- a/capstone/src/containers/PostShow.css
+++ b/capstone/src/containers/PostShow.css
@@ -12,7 +12,7 @@ img {
 }
 
 .item-info {
-    width: 1100px;
+    min-width: 1100px;
     height: 500px;
     background-color: hotpink;
     margin: 0 50px;
