--- a/capstone/src/components/listing.css
+++ b/capstone/src/components/listing.css
@@ -9,7 +9,7 @@ box-sizing: border-box;
     flex-direction: column;
     height: 300px;
     width: 1000px;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #f5eaea;
     margin: 0 auto;
 }
 
@@ -34,6 +34,7 @@ box-sizing: border-box;
     order: 2;
     margin: auto;
     margin-top: 0px;
+    color: #f5eaea;
 }
 
 .item-info-2 {
