--- a/capstone/src/components/listing.css
+++ b/capstone/src/components/listing.css
@@ -7,15 +7,15 @@ box-sizing: border-box;
 .container {
     display: flex;
     flex-direction: column;
-    height: 300px;
+    height: 225px;
     width: 1000px;
     border-bottom: 1px solid #f5eaea;
     margin: 0 auto;
 }
 
 .container img{
-    height: 250px;
-    width: 250px;
+    height: 200px;
+    width: 200px;
 }
 .img-container {
     display: flex;
@@ -38,18 +38,21 @@ box-sizing: border-box;
 }
 
 .item-info-2 {
-    
+    text-align: left;
+    margin-bottom: auto;
 }
 
 .seller-info {
     margin-left: auto;
     margin-right: 40px;
+    margin-bottom: auto;
+    text-align: left;
 }
 
 .item-info-2 h1 {
-    margin-bottom: 75px;
+    margin-bottom: 35px;
 }
 
 .item-info-2 h2 {
-    margin-bottom: 75px;
+    margin-bottom: 35px;
 }
