--- a/capstone/src/components/UserDetails.css
+++ b/capstone/src/components/UserDetails.css
@@ -1,13 +1,16 @@
 .user-info {
     display: flex;
     justify-content: space-between;
-    background-color: hotpink;
+    background-color: #5b5656;
+    color: #f5eaea;
     min-height: 250px;
     min-width: 1300px;
     margin-left: auto;
     order: 2;
     border-radius: 5px;
     position: relative;
+    box-shadow: 0px 12px 12px rgba(0, 0, 0, 0.75);
+
 }
 
 .user-info div span {
