--- a/capstone/src/components/listings.css
+++ b/capstone/src/components/listings.css
@@ -5,12 +5,20 @@
     border-right: 1px solid #f5eaea;
     min-width: 1050px;
     margin: 0 auto;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
+    scrollbar-color: black;
     height: 100%;
-    bottom: 0;
+    top: 10px;
+    bottom: 10px;
     position: relative;
     box-shadow: 0px 12px 12px rgba(0, 0, 0, 0.75);
+    border-radius: 5px;
+}
+
+.list-container-fix {
+    max-width: 1050px;
+    bottom: 10px;
 }
 
 button {
@@ -25,6 +33,7 @@ button {
     height: 50px;
     margin: 0 auto;
     transition: 0.3s linear ;
+    outline: none;
     
 }
 
@@ -39,6 +48,11 @@ button:hover {
     left: 0;
     right: 0;
     position: fixed;
+}
+
+.main-listings-fix {
+    flex-direction: column;
+
 }
 
 .right-col {
