--- a/capstone/src/components/nav.css
+++ b/capstone/src/components/nav.css
@@ -12,13 +12,30 @@ nav {
     height: 100%;
     width: 100%;
     align-items: center;
+    justify-content: space-between;
 }
-nav a {
-    margin-left: auto;
+nav .right-side {
+  
+    font-size: 22px;
+}
+nav .right-side a {
+    margin-right: 20px;
 }
 
-.Auth-btn {
-    margin-left: auto
+nav .search{
+ 
+}
+
+nav .left-side{
+    margin-left: 20px;
+    padding: 0;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.auth-btn {
+    display: flex;
+    font-size: 22px;
 }
 li {
     list-style: none;
