--- a/capstone/src/containers/PostShow.css
+++ b/capstone/src/containers/PostShow.css
@@ -14,18 +14,23 @@ img {
 .item-info {
     min-width: 1100px;
     height: 500px;
-    background-color: hotpink;
+    background-color: #5b5656;
+    color: #f5eaea;
     margin: 0 50px;
     border-radius: 5px;
+    box-shadow: 0px 12px 12px rgba(0, 0, 0, 0.75);
+
 }
 
 .row-user-more {
     margin: 50px 25px;
     margin-top: 20px;
     margin-bottom: 0;
+    color: #f5eaea;
     width: 500px;
     height: 300px;
-    background-color: hotpink;
+    background-color: #5b5656;
+    box-shadow: 0px 12px 12px rgba(0, 0, 0, 0.75);
     border-radius: 5px;
 }
 
@@ -44,3 +49,66 @@ img {
 }
 
 
+.auth-error {
+    margin-bottom: auto;
+}
+
+.description {
+    text-align: left;
+    padding: 0 20px;
+    font-size: 40px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    height: 60%
+}
+
+
+h2 span {
+    font-weight: normal;
+    font-size: 30px;
+}
+.bottom-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bottom-content div {
+    margin: 0 60px;
+    font-size: 28px;
+}
+
+.message-seller{
+    background-color: #7fcd91;
+    color: #f5eaea;
+    transition: 0.3s linear ;
+}
+
+.message-seller:hover {
+    background-color: rgb(106, 185, 125);
+}
+
+.delete-btn {
+    background-color: #7fcd91;
+    color: #f5eaea;
+    transition: 0.3s linear ;
+}
+
+.delete-btn:hover {
+    background-color: rgb(106, 185, 125);
+}
+
+i {
+    margin: 0 15px;
+}
+
+.follow {
+    background-color: #7fcd91;
+    color: #f5eaea;
+    transition: 0.3s linear ;
+}
+
+.follow:hover {
+    background-color: rgb(106, 185, 125);
+
+}
